syntax = "proto2";

import "dccl/option_extensions.proto";

package jaiabot.sensor.protobuf;

message AtlasScientificEZODO
{
    option (dccl.msg) = {
        unit_system: "si"
    };

    // notional - add units and additional fields as needed
    required double dissolved_oxygen = 1;
}



