syntax = "proto2";

import "dccl/option_extensions.proto";

package jaiabot.protobuf;

message SalinityData
{
    option (dccl.msg) = {
        unit_system: "si"
    };

    required double conductivity_raw = 1;
    required double conductivity = 2;
    required double total_dissolved_solids = 3;
    required double salinity_raw = 4;
    required double salinity = 5;
}
